--- a/index.html
+++ b/index.html
@@ -15,9 +15,51 @@
 <body>
     <div class="site-wrapper">
               
-              <h1>vf-redeye</h1>
-            <p>Find out more at the confluence page <a href="http://confluence.vodafone.co.nz/confluence/display/YTH/vf-redeye">here</a>. Or sign up below.</p>
-              <iframe src="https://docs.google.com/forms/d/1PGSs4F5_7x4AbJJmWnjMTZvNIRx9EImqUTwoQb1-aXI/viewform?embedded=true " width="600" height="1230" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<h1>vf-redeye</h1> 
+             
+        <div class="col-md-6"><p><a href="http://confluence.vodafone.co.nz/confluence/display/YTH/vf-redeye">Find out more</a></p></div><div class="col-md-6"> <p> <a href="#signup">sign up</a></p></div>
+        <h2 >Schedule</h2>
+        <div class="col-md-12">
+        <div class="col-md-1"></div>
+        <div class="col-md-10"><div class="table-responsive">
+        <table class="table table-condensed">
+        <tbody>
+            <tr>
+                <td>Thurs 24th</td>
+                <td>11:00AM</td>
+                <td>Kick Off</td>
+                <td>-Meet Shana (Our partner at Great Potentials)<br>-Pitch Ideas<br>-Form Teams</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>12:00PM</td>
+                <td>Lunch</td>
+                <td>-Get Fed<br>-Q&A with Shana<br>-Plan</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>5:00PM</td>
+                <td>Reconvene</td>
+                <td>-Meet back up<br>-Divy up work<br>-Build stuff</td>
+            </tr>
+            <tr>
+                <td>Fri 25th</td>
+                <td>9:00AM</td>
+                <td>Wrap Up</td>
+                <td>-Finishing touches<br>-Prepare Presentation</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>11:00AM</td>
+                <td>Show & Tell</td>
+                <td>-Show off what you have done<br>-Get feedback from Shana</td>
+            </tr>
+        </tbody>
+        </table>
+            </div>
+            </div>
+        </div>
+              <iframe  id="signup" src="https://docs.google.com/forms/d/1PGSs4F5_7x4AbJJmWnjMTZvNIRx9EImqUTwoQb1-aXI/viewform?embedded=true " width="600" height="1230" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
           </div>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
