Added Prize Giving time

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 <td>Show & Tell</td>
                 <td>-Show off what you have done<br>-Get feedback from Shana</td>
             </tr>
+            <tr>
+                <td></td>
+                <td>5:00PM</td>
+                <td>Prize Giving</td>
+                <td>-Pretty Self Explanatory</td>
+            </tr>
         </tbody>
         </table>
             </div>
